# ndn-traceroute

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile.client  Dockerfile.nfd-traceroute  Dockerfile.producer  Makefile  README.md  build-compose.py  build-net.py  build_compose.py  compose.yaml  docker-compose.yml  generate_configs.py  graph.dot  graph2.dot  requirements.txt  test_producer.sh
client/: CMakeLists.txt  Dockerfile  startup.sh
client/configs/template/: nfd.conf
client/src/: traceroute-client.cpp
configs/: c1.conf  f1.conf  intermediate.conf  nfd.conf  nfd1.conf  nfd2.conf
examples/: graph2.dot
producer/: CMakeLists.txt  Dockerfile  startup.sh
producer/configs/template/: nfd.conf
producer/src/: simple-producer.cpp
scripts/: start-nfd.sh
utils/: nfd.conf.template
